expose template configs
