# backend/docs/swagger.yaml
@@ -78,6 +78,17 @@ definitions:
     required:
     - name
     type: object
+  handlers.DetailTemplate:
+    properties:
+      defaultYaml:
+        type: string
+      description:
+        type: string
+      jsonSchema:
+        type: string
+      name:
+        type: string
+    type: object
   handlers.LoginRequest:
     properties:
       email:
@@ -300,6 +311,13 @@ definitions:
         items:
           type: string
         type: array
+    type: object
+  templates.Template:
+    properties:
+      description:
+        type: string
+      name:
+        type: string
     type: object
 info:
   contact:
@@ -1337,6 +1355,49 @@ paths:
       summary: Remove a user from a team
       tags:
       - teams
+  /templates:
+    get:
+      description: returns a list of available templates on the cluster
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/templates.Template'
+            type: array
+        "500":
+          description: error
+          schema:
+            type: string
+      summary: Get templates list
+      tags:
+      - templates
+  /templates/{id}:
+    get:
+      description: Get a template from a CRD and returns it, its json schema and a
+        default yaml
+      parameters:
+      - description: template CRD name
+        in: path
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handlers.DetailTemplate'
+        "500":
+          description: error
+          schema:
+            type: string
+      summary: Get a detailed template
+      tags:
+      - templates
   /users:
     get:
       description: Get a list of all users
