# backend/internal/handlers/templates.go
@@ -4,28 +4,37 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
-	"github.com/stolos-cloud/stolos/backend/internal/templates"
+	"github.com/stolos-cloud/stolos/backend/internal/services/templates"
 	"k8s.io/client-go/rest"
 )
 
-type TemplatesHandler struct{}
+type TemplatesHandler struct {
+	k8sClient *rest.Config
+}
 
 type DetailTemplate struct {
 	templates.Template
-	JsonSchema  string
-	DefaultYaml string
+	JsonSchema  templates.JsonSchema `json:"jsonSchema"`
+	DefaultYaml string               `json:"defaultYaml"`
 }
 
+func NewTemplatesHandler(k8s *rest.Config) *TemplatesHandler {
+	return &TemplatesHandler{
+		k8sClient: k8s,
+	}
+}
+
+// GetTemplatesList godoc
+// @Summary Get templates list
+// @Description returns a list of available templates on the cluster
+// @Tags templates
+// @Produce json
+// @Success 200 {object} []templates.Template
+// @Failure 500 {object} string "error"
+// @Router /templates [get]
 func (h *TemplatesHandler) GetTemplatesList(c *gin.Context) {
 
-	// Create in-cluster config
-	config, err := rest.InClusterConfig()
-	if err != nil {
-		c.String(http.StatusInternalServerError, "Failed to load in-cluster config: %v", err)
-		return
-	}
-
-	templatesList, err := templates.ListTemplates(config)
+	templatesList, err := templates.ListTemplates(h.k8sClient)
 	if err != nil {
 		c.String(http.StatusInternalServerError, err.Error())
 	}
@@ -33,15 +42,18 @@ func (h *TemplatesHandler) GetTemplatesList(c *gin.Context) {
 	c.JSON(http.StatusOK, templatesList)
 }
 
+// GetTemplate godoc
+// @Summary Get a detailed template
+// @Description Get a template from a CRD and returns it, its json schema and a default yaml
+// @Tags templates
+// @Param id path string true "template CRD name"
+// @Produce json
+// @Success 200 {object} DetailTemplate
+// @Failure 500 {object} string "error"
+// @Router /templates/{id} [get]
 func (h *TemplatesHandler) GetTemplate(c *gin.Context) {
-	// Create in-cluster config
-	config, err := rest.InClusterConfig()
-	if err != nil {
-		c.String(http.StatusInternalServerError, "Failed to load in-cluster config: %v", err)
-		return
-	}
 
-	template, err := templates.GetTemplate(config, c.Param("name"))
+	template, err := templates.GetTemplate(h.k8sClient, c.Param("name"))
 	if err != nil {
 		c.String(http.StatusInternalServerError, err.Error())
 		return
@@ -62,7 +74,7 @@ func (h *TemplatesHandler) GetTemplate(c *gin.Context) {
 	detailTemplate := DetailTemplate{
 		Template:    template,
 		DefaultYaml: defaultYaml,
-		JsonSchema:  string(jsonSchema),
+		JsonSchema:  jsonSchema,
 	}
 
 	c.JSON(http.StatusOK, detailTemplate)
